<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtpass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtemail"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txttpass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/ttpass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpass"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtfirst"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="11"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txttpass"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtfirst2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/lname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="11"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txttpass"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtphone"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/phonw"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txttpass"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtzipcod"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/zipcode"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtaddress"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtaddress"
            android:layout_width="300dp"
            android:layout_height="58dp"
            android:layout_marginTop="-6dp"
            android:ems="10"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtphone"
            app:layout_constraintVertical_bias="0.182" />

        <CheckBox
            android:id="@+id/check"
            android:layout_width="136dp"
            android:layout_height="22dp"
            android:layout_marginBottom="44dp"
            android:text="@string/gh1"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="177dp"
            android:layout_height="23dp"
            android:text="@string/newsup"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/btnsub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toEndOf="@+id/check"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:text="@string/sabt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="190dp"
            android:layout_height="68dp"
            android:inputType="number"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/Date"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/txtaddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtphone"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/Month"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/txtaddress"
            app:layout_constraintStart_toEndOf="@+id/Date"
            app:layout_constraintTop_toBottomOf="@+id/txtphone"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/Year"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="232dp"
            android:layout_marginLeft="232dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/txtaddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtphone"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="71dp"
            android:layout_height="39dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/gender"
            app:layout_constraintBottom_toTopOf="@+id/check2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtzipcod"
            app:layout_constraintVertical_bias="0.47" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="98dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toTopOf="@+id/check2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtzipcod"
            app:layout_constraintVertical_bias="0.478">

            <RadioButton
                android:id="@+id/radioBtmard"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/mard"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="109dp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="489dp" />

            <RadioButton
                android:id="@+id/radioBtzan"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/zan"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="109dp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="537dp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>